--- a/ranked4-frontend/src/app/security/login/login.component.html
+++ b/ranked4-frontend/src/app/security/login/login.component.html
@@ -24,7 +24,7 @@
   </form>
   
   <p>
-    Pas encore de compte ? 
+    Don’t have an account?
     <a routerLink="/register">Register</a>
   </p>
 </div>
