--- a/ranked4-frontend/src/app/app.component.scss
+++ b/ranked4-frontend/src/app/app.component.scss
@@ -29,6 +29,9 @@
   
   .header-center {
     justify-self: center;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
   }
   
   .header-right {
