--- a/ranked4-frontend/src/app/game/game/game.component.scss
+++ b/ranked4-frontend/src/app/game/game/game.component.scss
@@ -117,22 +117,15 @@
       &.piece-p2 {
         background-color: var(--player-two-color);
       }
-      
-      &.drop-animation {
-        animation: drop 0.4s ease-out forwards;
+
+      &.last-move-piece {
+        transform: scale(1.05);
+        border: 3px solid white;
+        box-shadow: inset 0 -3px 5px rgba(0,0,0,0.2), 
+                    inset 0 2px 3px rgba(255,255,255,0.3),
+                    0 0 15px 5px rgba(255, 255, 255, 0.7);
       }
     }
-  }
-}
-
-@keyframes drop {
-  from {
-    transform: translateY(calc(var(--cell-size) * -6));
-    opacity: 0.8;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
   }
 }
 
