Fix display for matchmaking

--- a/ranked4-frontend/src/app/game/game/game.component.html
+++ b/ranked4-frontend/src/app/game/game/game.component.html
@@ -23,7 +23,7 @@
             {{ user.displayName }}
             <span class="you-indicator">(You)</span>
           </span>
-          <span class="player-elo">ELO: {{ user.elo }}</span>
+          <span class="player-elo">{{ user.elo }} R4P</span>
         </div>
         
         <div 
@@ -61,7 +61,7 @@
 
         <div class="player-details">
           <span class="player-name">{{ opponent.displayName }}</span>
-          <span class="player-elo">ELO: {{ opponent.elo }}</span>
+          <span class="player-elo">{{ opponent.elo }} R4P</span>
         </div>
 
         <div 
