--- a/ranked4-frontend/src/app/home/home.component.html
+++ b/ranked4-frontend/src/app/home/home.component.html
@@ -20,7 +20,7 @@
           
           <div class="user-info">
             <h2>Welcome, {{ user.displayName }} !</h2>
-            <p class="elo-rating">ELO : {{ user.elo }}</p>
+            <p class="elo-rating">ELO : {{ user.elo }} R4P</p>
           </div>
         </header>
 
