--- a/ranked4-frontend/src/app/game/matchmaking/matchmaking.component.scss
+++ b/ranked4-frontend/src/app/game/matchmaking/matchmaking.component.scss
@@ -1,3 +1,9 @@
+.matchmaking-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .matchmaking-container {
   display: flex;
   flex-direction: column;
@@ -7,8 +13,10 @@
   background-color: var(--surface-color);
   border-radius: 8px;
   border: 1px solid var(--border-color);
-  margin-top: 2rem;
   text-align: center;
+  max-width: 1140px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .spinner {
