--- a/ranked4-frontend/src/app/app.component.scss
+++ b/ranked4-frontend/src/app/app.component.scss
@@ -37,6 +37,12 @@
   .header-right {
     justify-self: end;
   }
+
+  .header-right nav {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
   
   .btn-menu-toggle.mobile-only {
     display: none;
